--- a/aidocs.yaml.template
+++ b/aidocs.yaml.template
@@ -19,3 +19,15 @@ modules:
 
 output_dir: docs/code-index
 merge_threshold: 2
+
+# analysis:
+#   structural_health:
+#     god_class_threshold: 12
+#     parameter_bloat_threshold: 5
+#     data_class_explosion_threshold: 8
+#     fat_interface_threshold: 6
+#     layer_rules:
+#       Composable: [ui, presentation]
+#       Entity: [data]
+#       Dao: [data]
+#       HiltViewModel: [presentation]
